--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My application</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div>
-        <h1>Project name</h1>
-
-    </div>
-    
+  <div id="main-page">
+    <img src="imagem1.png" alt="Imagem de exemplo">
+    <h1>Skateboard Project</h1>
+    <button onclick="window.location.href='login.html'">Login</button> <br>
+    <button onclick="window.location.href='registo.html'">Register</button> <br>
+    <span id="forgot-password-link"> <a href="forgotpassword.html">Forgot password?</a></span>
+  </div>
 </body>
+<footer>
+  <p>Copyright 2024 - All rights reservedby...</p>
+</footer>
 </html>
