--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
           <input type="password" id="password" name="password">
         </div>
         <div class="form-group">
-          <button type="submit" class="login-button">Login</button>
+          <button  class="login-button"><a href="home.html">Login</a></button>
           <span> <a href="forgotpassword.html">Forgot Password</a></span>
         </div>
       </form>
