--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -4,26 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="login.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div id="login-container">
-    <button onclick="window.location.href = 'index.html'">Back</button>
-    <div id="login-form">
-      <h2>Forgot Password</h2>
+  <div id="login-container" class="d-flex flex-column justify-content-start align-items-start" style="height: 100vh; padding: 20px;">
+    <button onclick="window.location.href = 'index.html'" class="btn btn-secondary mb-3">Back</button>
+    <div id="login-form" class="bg-light p-4 rounded mx-auto">
+      <h2 class="text-center">Forgot Password</h2>
       <form>
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email">
+        <div class="mb-3">
+          <label for="email" class="form-label">Email:</label>
+          <input type="email" id="email" name="email" class="form-control">
         </div>
-        <div class="form-group">
-          <button type="submit" class="login-button">Get new password</button>
+        <div class="mb-3">
+          <button type="submit" class="btn btn-primary btn-block">Get new password</button>
         </div>
       </form>
     </div>
   </div>
+
+  <footer class="bg-light text-muted py-2 fixed-bottom">
+    <div class="container">
+      <p class="m-0">Copyright 2024 - All rights reservedby...</p>
+    </div>
+  </footer>
 </body>
-<footer>
-    <p>Copyright 2024 - All rights reservedby...</p>
-</footer>
 </html>
