--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My application</title>
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div id="main-page">
-    <img src="imagem1.png" alt="Imagem de exemplo">
-    <h1>Skateboard Project</h1>
-    <button onclick="window.location.href='login.html'">Login</button> <br>
-    <button onclick="window.location.href='registo.html'">Register</button> <br>
-    <span id="forgot-password-link"> <a href="forgotpassword.html">Forgot password?</a></span>
+  <div id="main-page" class="d-flex flex-column align-items-center justify-content-center" style="height: 100vh;">
+    <img src="imagem1.png" alt="Imagem de exemplo" class="img-fluid">
+    <h1 class="mt-3">Skateboard Project</h1>
+    <button onclick="window.location.href='login.html'" class="btn btn-primary mt-3">Login</button>
+    <button onclick="window.location.href='registo.html'" class="btn btn-secondary mt-3">Register</button>
+    <div id="forgot-password-link" class="mt-3">
+      <a href="forgotpassword.html" class="text-decoration-none">Forgot password?</a>
+    </div>
   </div>
+
+  <footer class="bg-light text-muted py-2 fixed-bottom">
+    <div class="container">
+      <p class="m-0">Copyright 2024 - All rights reservedby...</p>
+    </div>
+  </footer>
 </body>
-<footer>
-  <p>Copyright 2024 - All rights reservedby...</p>
-</footer>
 </html>
