--- a/registo.html
+++ b/registo.html
@@ -3,45 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="registo.css">
+  <title>Registro</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-  <div id="login-container">
-    <button onclick="window.location.href = 'index.html'">Back</button>
-    <div id="login-form">
-      <h2>Register</h2>
-      <form>
-        <div class="form-group">
-            <label for="text">Name:</label>
-            <input type="text" id="text" name="text">
+  <div class="container">
+    <div class="row justify-content-center align-items-center" style="height: 100vh;">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title text-center">Register</h2>
+            <form action="/index" method="post">
+              <div class="form-group">
+                <label for="text">Name:</label>
+                <input type="text" id="text" name="text" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="password2">Re-type Password:</label>
+                <input type="password" id="password2" name="password2" class="form-control">
+              </div>
+              <div class="form-group">
+                <div class="form-check">
+                  <input type="checkbox" id="terms" name="terms" value="agree" class="form-check-input">
+                  <label for="terms" class="form-check-label">I agree to the <a href="#" style="color: blue;">terms of use</a> and <a href="#" style="color: blue;">privacy policy</a>.</label>
+                </div>
+              </div>
+              <div class="form-group">
+                <a href="/index.html" class="btn btn-primary btn-block">Register</a>
+                <span class="d-block text-center"><a href="#" class="text-primary">Learn more</a></span>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email">
-        </div>
-        <div class="form-group">
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password">
-        </div>
-        <div class="form-group">
-            <label for="password">Re-type Password:</label>
-            <input type="password" id="password" name="password">
-        </div>
-        <div class="form-group">
-          <label>
-            <input type="checkbox" name="terms" value="agree"> I agree to the <a href="#" style="color: blue;">terms of use</a> and <a href="#" style="color: blue;">privacy policy</a>.
-          </label>
-        </div>
-        <div class="form-group">
-          <button type="submit" class="login-button">Login</button>
-          <span> <a href="#">Learn more</a></span>
-        </div>
-      </form>
+      </div>
     </div>
   </div>
-  <footer>
-    <p>Copyright 2024 - All rights reservedby...</p>
+  <footer class="footer fixed-bottom">
+    <div class="container">
+      <p class="m-0">Copyright 2024 - All rights reservedby...</p>
+    </div>
   </footer>
 </body>
 </html>
